--- a/client/jspm-src/partials/authProviderDialog.html
+++ b/client/jspm-src/partials/authProviderDialog.html
@@ -10,28 +10,31 @@
             </md-button>
         </div>
     </md-toolbar>
-  <md-dialog-content class="md-dialog-content">
-    <div class="md-dialog-content-body" layout="column">
-        <md-whiteframe class="md-whiteframe-2dp" style="margin: 8px; border-radius: 3px;">
+    <md-dialog-content class="md-dialog-content">
+        <div class="md-dialog-content-body" layout="column">
+            <md-whiteframe class="md-whiteframe-2dp" style="margin: 8px; border-radius: 3px;">
 
-            <form layout="row" layout-align="start center" layout-padding>
-    <div layout="column"><span style="font-size:14px">{{'AUTHENTICATE_REQUEST_PREFIX' | translate}}
+                <form name="passwordLessForm" layout="row" layout-align="start center" layout-padding>
+                    <div layout="column"><span style="font-size:14px">{{'AUTHENTICATE_REQUEST_PREFIX' | translate}}
         {{'EMAIL_LONG' | translate}}
                 </span>
-                <md-input-container md-no-float class="md-block">
-                    <md-icon>email</md-icon>
-                    <input style="min-width: 230px;" ng-model="user.title" type="email" placeholder="{{'EMAIL' | translate}}">
-                </md-input-container>
-    </div>
-                <!--<md-input-container>-->
-                    <!--<label>סיסמה</label>-->
-                    <!--<input ng-model="user.email" type="password">-->
-                <!--</md-input-container>-->
-                <md-button style="font-weight: normal">{{'CONTINUE' | translate}}</md-button>
-            </form>
-        </md-whiteframe>
+                        <md-input-container md-no-float class="md-block">
+                            <md-icon>email</md-icon>
+                            <input name="email" style="min-width: 230px;" ng-model="user.title" type="email" required
+                                   placeholder="{{'EMAIL' | translate}}">
+                            <div ng-messages="passwordLessForm.email.$error">
+                                <div ng-message="required">{{'REQUIRED_FIELD' | translate}}</div>
+                                <div ng-message="email">{{'INVALID_EMAIL_FIELD' | translate}}</div>
+                            </div>
+                        </md-input-container>
+                    </div>
+                    <md-button style="font-weight: normal" ng-click="ctrl.passwordLessAuth()">{{'CONTINUE' |
+                        translate}}
+                    </md-button>
+                </form>
+            </md-whiteframe>
 
-      <md-button ng-click="ctrl.authenticate()" class="md-raised">
+            <md-button ng-click="ctrl.authenticate()" class="md-raised">
           <span layout="row" layout-align="start center">
               <span style="width:15px;"></span>
             <img src="images/Google_-G-_Logo.svg" width="18" height="18">
@@ -40,8 +43,8 @@
 {{'GOOGLE' | translate}}
             </span>
           </span>
-      </md-button>
-      <md-button ng-disabled="true" class="md-raised">
+            </md-button>
+            <md-button ng-disabled="true" class="md-raised">
           <span layout="row" layout-align="start center">
               <span style="width:14px;"></span>
             <img src="images/Facebook_-F-_Logo.svg" width="18" height="18">
@@ -51,8 +54,8 @@
 </span>
           <small class="md-caption">({{'NOT_SUPPORTED' | translate}})</small>
           </span>
-      </md-button>
+            </md-button>
 
-    </div>
-  </md-dialog-content>
+        </div>
+    </md-dialog-content>
 </md-dialog>
