start adding client side passwordless support

--- a/client/jspm-src/partials/authProviderDialog.html
+++ b/client/jspm-src/partials/authProviderDialog.html
@@ -1,10 +1,10 @@
 <md-dialog>
     <md-toolbar>
         <div class="md-toolbar-tools">
-            <h3>{{ 'SIGN_IN' | translate }}</h3>
+            <h4 class="md-title">{{ 'SIGN_IN' | translate }}</h4>
             <span flex="" class="flex"></span>
             <md-button class="md-icon-button" ng-click="closeDialog()">
-                <md-icon aria-label="Close dialog" class="ng-scope ng-isolate-scope" aria-hidden="true">
+                <md-icon aria-label="Close dialog" aria-hidden="true">
                     close
                 </md-icon>
             </md-button>
