put passwordless result inside the view

--- a/client/server-views/index.html.ejs
+++ b/client/server-views/index.html.ejs
@@ -23,6 +23,10 @@
 <script src="jspm_packages/system.js"></script>
 <script src="config.js"></script>
 <script>
+    <% if (typeof passwordless !== 'undefined') { %>
+    window.passwordless = <%- passwordless %>;
+    <% } %>
+
     System.import('index');
 </script>
 
