--- a/client/jspm-src/partials/authProviderDialog.html
+++ b/client/jspm-src/partials/authProviderDialog.html
@@ -3,7 +3,7 @@
         <div class="md-toolbar-tools">
             <h4 class="md-title">{{ 'SIGN_IN' | translate }}</h4>
             <span flex="" class="flex"></span>
-            <md-button class="md-icon-button" ng-click="closeDialog()">
+            <md-button class="md-icon-button" ng-click="ctrl.closeDialog()">
                 <md-icon aria-label="Close dialog" aria-hidden="true">
                     close
                 </md-icon>
@@ -14,7 +14,7 @@
         <div class="md-dialog-content-body" layout="column">
             <md-whiteframe class="md-whiteframe-2dp" style="margin: 8px; border-radius: 3px;">
 
-                <form name="passwordlessForm" layout="row" layout-align="start center" layout-padding>
+                <form name="ctrl.passwordlessForm" layout="row" layout-align="start center" layout-padding>
                     <div layout="column"><span style="font-size:14px">{{'AUTHENTICATE_REQUEST_PREFIX' | translate}}
         {{'EMAIL_LONG' | translate}}
                 </span>
@@ -22,7 +22,7 @@
                             <md-icon>email</md-icon>
                             <input name="email" style="min-width: 230px;" ng-model="ctrl.email" type="email" required
                                    placeholder="{{'EMAIL' | translate}}">
-                            <div ng-messages="passwordlessForm.email.$error">
+                            <div ng-messages="ctrl.passwordlessForm.email.$error">
                                 <div ng-message="required">{{'REQUIRED_FIELD' | translate}}</div>
                                 <div ng-message="email">{{'INVALID_EMAIL_FIELD' | translate}}</div>
                             </div>
