--- a/client/jspm-src/partials/authProviderDialog.html
+++ b/client/jspm-src/partials/authProviderDialog.html
@@ -11,51 +11,6 @@
         </div>
     </md-toolbar>
     <md-dialog-content class="md-dialog-content">
-        <div class="md-dialog-content-body" layout="column">
-            <md-whiteframe class="md-whiteframe-2dp" style="margin: 8px; border-radius: 3px;">
-
-                <form name="ctrl.passwordlessForm" layout="row" layout-align="start center" layout-padding>
-                    <div layout="column"><span style="font-size:14px">{{'AUTHENTICATE_REQUEST_PREFIX' | translate}}
-        {{'EMAIL_LONG' | translate}}
-                </span>
-                        <md-input-container md-no-float class="md-block">
-                            <md-icon>email</md-icon>
-                            <input name="email" style="min-width: 230px;" ng-model="ctrl.email" type="email" required
-                                   placeholder="{{'EMAIL' | translate}}">
-                            <div ng-messages="ctrl.passwordlessForm.email.$error">
-                                <div ng-message="required">{{'REQUIRED_FIELD' | translate}}</div>
-                                <div ng-message="email">{{'INVALID_EMAIL_FIELD' | translate}}</div>
-                            </div>
-                        </md-input-container>
-                    </div>
-                    <md-button style="font-weight: normal" ng-click="ctrl.passwordlessAuth()">{{'CONTINUE' |
-                        translate}}
-                    </md-button>
-                </form>
-            </md-whiteframe>
-
-            <md-button ng-click="ctrl.authenticate()" class="md-raised">
-          <span layout="row" layout-align="start center">
-              <span style="width:15px;"></span>
-            <img src="images/Google_-G-_Logo.svg" width="18" height="18">
-            <span flex style="margin:0 24px; text-align: start; font-weight: normal; text-transform: none;">
-            {{'AUTHENTICATE_REQUEST_PREFIX' | translate}}
-{{'GOOGLE' | translate}}
-            </span>
-          </span>
-            </md-button>
-            <md-button ng-disabled="true" class="md-raised">
-          <span layout="row" layout-align="start center">
-              <span style="width:14px;"></span>
-            <img src="images/Facebook_-F-_Logo.svg" width="18" height="18">
-            <span flex style="margin:0 24px; text-align: start; font-weight: normal; text-transform: none;">
-                {{'AUTHENTICATE_REQUEST_PREFIX' | translate}}
-{{'FACEBOOK' | translate}}
-</span>
-          <small class="md-caption">({{'NOT_SUPPORTED' | translate}})</small>
-          </span>
-            </md-button>
-
-        </div>
+        <ng-include src="'partials/authProviderSelection.html'"></ng-include>
     </md-dialog-content>
 </md-dialog>
