refactor user-management into modules

--- a/client/server-views/index.html.ejs
+++ b/client/server-views/index.html.ejs
@@ -14,7 +14,7 @@
 </head>
 <body ng-cloak>
 <div layout="row" layout-align="end center" layout-padding>
-    <cl-log-switch></cl-log-switch>
+    <user-menu></user-menu>
     <lang-switch></lang-switch>
 </div>
 
