--- a/client/server-views/index.html.ejs
+++ b/client/server-views/index.html.ejs
@@ -13,9 +13,14 @@
     </style>
 </head>
 <body ng-cloak>
-<div layout="row" layout-align="end center" layout-padding>
-    <user-menu></user-menu>
+<div layout="row" layout-align="start center" layout-padding>
+    <a md-button href="/">
+        <md-icon>home</md-icon>
+        {{ 'HOME' | translate }}
+    </a>
+    <div flex></div>
     <lang-switch></lang-switch>
+    <user-menu></user-menu>
 </div>
 
 <ng-view></ng-view>
