load material-design-icons directly from google cdn

--- a/client/server-views/index.html.ejs
+++ b/client/server-views/index.html.ejs
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <base href="/">
 
-    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
+    <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons'>
     <link rel='stylesheet' href='//fonts.googleapis.com/earlyaccess/notosanshebrew.css'>
+
     <style>
         [ng-cloak] {
             display: none !important;
