--- a/client/server-views/provider-popup-redirect.html.ejs
+++ b/client/server-views/provider-popup-redirect.html.ejs
@@ -1,1 +1,1 @@
-<!doctype html><script>opener.postMessage(<%- __flash %>, location.origin);close()</script>
+<!doctype html><script>opener.postMessage(<%- __flash %>, location.origin);</script>
